--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>tensquare_qa</module>
         <module>tensquare_article</module>
         <module>tensquare_gathering</module>
+        <module>tensquare_spit</module>
     </modules>
 
     <parent>
@@ -30,13 +31,10 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
