add all eureka-client

--- a/tensquare_qa/src/main/resources/application.yml
+++ b/tensquare_qa/src/main/resources/application.yml
@@ -17,3 +17,10 @@ spring:
 jwt:
   config:
     key: Lucifer
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer-ip-address: true
