--- a/tensquare_user/src/main/resources/application.yml
+++ b/tensquare_user/src/main/resources/application.yml
@@ -22,3 +22,10 @@ jwt:
   config:
     key: Lucifer
     ttl: 360000
+
+eureka:
+  client:
+    service‐url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer‐ip‐address: true
