--- a/tensquare_article/src/main/resources/application.yml
+++ b/tensquare_article/src/main/resources/application.yml
@@ -19,3 +19,9 @@ spring:
     mongodb:
       host: localhost
       database: recruitdb
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer-ip-address: true
