--- a/tensquare_base/pom.xml
+++ b/tensquare_base/pom.xml
@@ -22,6 +22,11 @@
             <version>8.0.15</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.0.4.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>com.tensquare</groupId>
             <artifactId>tensquare_common</artifactId>
             <version>1.0-SNAPSHOT</version>
