--- a/tensquare_gathering/src/main/resources/application.yml
+++ b/tensquare_gathering/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
     generate-ddl: true
   redis:
     host: localhost
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer-ip-address: true
