--- a/tensquare_sms/src/main/resources/application.yml
+++ b/tensquare_sms/src/main/resources/application.yml
@@ -12,3 +12,10 @@ spring:
       accessKeySecret:
       template_code:
       sign_name:
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer-ip-address: true
