--- a/tensquare_spit/src/main/resources/application.yml
+++ b/tensquare_spit/src/main/resources/application.yml
@@ -10,3 +10,10 @@ spring:
       database: spitdb
     redis:
       host: localhost
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    prefer-ip-address: true
