--- a/tensquare_sms/src/main/resources/application.yml
+++ b/tensquare_sms/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
   rabbitmq:
     host: localhost
 
-  aliyun:
-    sms:
-      accessKeyId:
-      accessKeySecret:
-      template_code:
-      sign_name:
+aliyun:
+  sms:
+    accessKeyId: LTAI1NqkQl45SxK2
+    accessKeySecret: uJ6X4fU3X6cEaDF3SycKxTrQaTNyTl
+    template_code: SMS_171185040
+    sign_name: Samelelgx
 
 eureka:
   client:
