--- a/tensquare_search/src/main/resources/application.yml
+++ b/tensquare_search/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: tensquare-search
   data:
     elasticsearch:
-      cluster-nodes: 127.0.0.1:9300
+      cluster-nodes: localhost:9300
 eureka:
   client:
     service-url:
