--- a/tensquare_qa/src/main/resources/application.yml
+++ b/tensquare_qa/src/main/resources/application.yml
@@ -24,3 +24,7 @@ eureka:
       defaultZone: http://localhost:6868/eureka
   instance:
     prefer-ip-address: true
+
+feign:
+  hystrix:
+    enabled: true
