--- a/tensquare_base/src/main/resources/application.yml
+++ b/tensquare_base/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: tensquare-base #
+    name: tensquare-base
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/tensquare_base?useUnicode=true&character_set_server=utf8mb4&allowMultiQueries=true
