--- a/tensquare_config/src/main/resources/application.yml
+++ b/tensquare_config/src/main/resources/application.yml
@@ -9,4 +9,11 @@ spring:
       server:
         git:
           uri: https://gitee.com/Evil-LGX/tensquare-config.git
+  rabbitmq:
+    host: localhost
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
