--- a/tensquare_ai/pom.xml
+++ b/tensquare_ai/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>nd4j-native-platform</artifactId>
             <version>1.0.0-beta</version>
         </dependency>
+        <dependency>
+            <groupId>com.tensquare</groupId>
+            <artifactId>tensquare_common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
