--- a/tensquare_article_crawler/pom.xml
+++ b/tensquare_article_crawler/pom.xml
@@ -19,7 +19,7 @@
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j‐log4j12</artifactId>
+                    <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
