--- a/tensquare_article_crawler/src/main/resources/application.yml
+++ b/tensquare_article_crawler/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     database: mysql
     show-sql: true
     generate-ddl: true
+  cloud:
+    refresh:
+      refreshable: none
 redis:
   host: localhost
 
